After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659999 - Help button didn't work
Help button didn't work
Status: RESOLVED FIXED
Product: gnome-utils
Classification: Deprecated
Component: screenshot
3.1.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-utils Maintainers
gnome-utils Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-24 10:15 UTC by Yasumichi Akahoshi
Modified: 2011-09-26 21:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fixed ghelp uri (557 bytes, patch)
2011-09-24 10:15 UTC, Yasumichi Akahoshi
committed Details | Review

Description Yasumichi Akahoshi 2011-09-24 10:15:25 UTC
Created attachment 197393 [details] [review]
fixed ghelp uri

When help button is clicked, yelp say "Document Not Found".
Uri "ghelp:user-guide#goseditmainmenu-53" is in gnome2-user-guide.
We need to update uri "ghelp:gnome-help#screen-shot-record".
Comment 1 Cosimo Cecchi 2011-09-26 21:34:55 UTC
Fixed in master, thanks for the report.