screenshot: use the correct uri for Help

https://bugzilla.gnome.org/show_bug.cgi?id=659999